<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.personal_area.PersonalAreaFragment">

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/imageview"
        android:src="@drawable/ic_profile" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:text="@string/tv_title_rus"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/tvSpeciality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvName"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:text="@string/tv_speciality_rus"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSpeciality"
        android:layout_marginStart="180dp"
        android:layout_marginTop="5dp"
        android:text="@string/tv_city_rus"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCity"
        android:layout_marginStart="180dp"
        android:layout_marginTop="5dp"
        android:text="@string/tv_contact_rus"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvEducation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvContact"
        android:layout_marginStart="180dp"
        android:layout_marginTop="5dp"
        android:text="@string/tv_education_rus"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvEducation"
        android:layout_marginStart="180dp"
        android:layout_marginTop="5dp"
        android:text="@string/tv_status_rus"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvStatus"
        android:layout_margin="15dp"
        android:backgroundTint="#FFE500"
        android:text="@string/btn_edit_rus"
        android:textColor="@color/black"
        app:cornerRadius="15dp" />

    <TextView
        android:id="@+id/tvDataCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSpeciality"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:text="@string/tv_data_city_name_rus"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvDataContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDataCity"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:text="@string/tv_data_contact_rus"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvDataEducation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDataContact"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:text="@string/tv_data_education_rus"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvDataStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDataEducation"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:text="@string/tv_data_status"
        android:visibility="invisible" />

</RelativeLayout>