<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    tools:context=".presentation.ui.fragments.first_registration_fragment.FirstRegistrationFragment">
    <TextView
        android:id="@+id/tvRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/registration_rus"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/etSurname"
        android:layout_width="315dp"
        android:layout_height="56dp"
        android:layout_marginTop="56dp"
        android:drawableStart="@drawable/ic_account"
        android:drawablePadding="16dp"
        android:hint="@string/last_name_rus"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegistration" />
    <EditText
        android:id="@+id/etName"
        android:layout_width="315dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_account"
        android:drawablePadding="16dp"
        android:hint="@string/name_rus"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSurname" />
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="315dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="20dp"
        android:hint="@string/mail_rus"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etName" />
    <Button
        android:id="@+id/btnRegistration"
        android:layout_width="220dp"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/black"
        android:text="@string/registration_rus"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@id/btnRegistration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/or_rus"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnGmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_gmail"
        app:layout_constraintTop_toBottomOf="@id/tvOr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="26dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>